--- a/mobile-home.html
+++ b/mobile-home.html
@@ -4,37 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mobile-home.css">
-    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="./mobile-home.css">
     <title>Document</title>
 </head>
 <body>
     <nav class="menubar">
         <div class="menu">
-            <a href=""><img src="/assets/menu.svg" alt="Meun"></a>
+            <a href=""><img src="./assets/menu.svg"></a>
         </div>
         <div class="home">
-            <a href=""><img src="/assets/home.svg" alt="Home"></a>
+            <a href=""><img src="./assets/home.svg"></a>
         </div>
         <form class="search" action="" method="">
             <input class="search" type="text" placeholder="" name="search-todo">          
         </form>
-        <div class="addTaskGray">
-            <a href=""><img src="/assets/add_gray.svg" alt="Add a task"></a>
+        <div class="addTodo">
+            <button id="edit-todo"><img src="./assets/add_gray.svg"></button>
         </div>
     </nav>
     <main>
         <div class="date">
             <h1>Today</h1>
-            <p class="dateToday">Sat 16 Jul</p>
+            <!--render todays date over JS (window object)-->
+            <p class="dateToday" id="dateToday"></p> 
         </div>
         <hr class="devider">
-        <div class="newTask">
-            <div class= "add-task-color">
-                <img src="/assets/add_color.svg" alt="Add a task">
-            </div>
-            <p class="addNewTask">Add task</p>
-         </div>
+        <div id="add-todo"></div>
+        <div class="renderTasks">
+            <!-- <div class="bulletPointColor">
+                <img src="./assets/ellipse_color.svg" alt="bullet point">
+            </div> -->
+            <!-- <div class="taskElement">
+                <p class="taskDescription">Practicing JS / 5 codewars challenges</p>
+                <div class="editTask">
+                    <a href=""><img src="./assets/edit.svg" alt="edit task"></a>
+                    <a href=""><img src="./assets/delete.svg" alt="delete task"></a>
+                </div> -->
+                <!-- <div class="deleteTask"> </div> -->
+        </div>
     </main>
     <script src="mobile-home.js"></script>  
 </body>
