todo button func

--- a/mobile-home.html
+++ b/mobile-home.html
@@ -30,18 +30,7 @@
         </div>
         <hr class="devider">
         <div id="add-todo"></div>
-        <div class="renderTasks">
-            <!-- <div class="bulletPointColor">
-                <img src="./assets/ellipse_color.svg" alt="bullet point">
-            </div> -->
-            <!-- <div class="taskElement">
-                <p class="taskDescription">Practicing JS / 5 codewars challenges</p>
-                <div class="editTask">
-                    <a href=""><img src="./assets/edit.svg" alt="edit task"></a>
-                    <a href=""><img src="./assets/delete.svg" alt="delete task"></a>
-                </div> -->
-                <!-- <div class="deleteTask"> </div> -->
-        </div>
+        <div class="renderTasks"></div>
     </main>
     <script src="mobile-home.js"></script>  
 </body>
